[gd_scene load_steps=13 format=2]

[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_idle_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Hero_script.gd" type="Script" id=5]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_run_anim_f3.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Characters/Hero/wizzard_m_run_anim_f1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Mage_idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.5344
height = 20.3726

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.5
height = 26.5

[node name="Hero" type="KinematicBody2D" groups=[
"Player",
]]
collision_mask = 2147483654
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "Mage_idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 22.8533 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.25, 23 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Reload_speed" to="." method="_on_Reload_speed_timeout"]
